# Pick-and-Place-Robot-

./: README.md
final_project/: CMakeLists.txt  package.xml
final_project/msg/: hand.msg
final_project/src/scripts/: arm_controller.py  camera_hand.py  key.py
mobile/: CMakeLists.txt  package.xml
mobile/config/: joint_names_mobile.yaml  joint_trajectory_controller.yaml
mobile/launch/: display.launch  gazebo.launch  robot_urdf.launch
mobile/meshes/: base_arm.STL  base_link.STL  grip1.STL  grip2.STL  leftlink.STL  link1.STL  link2.STL  link3.STL  link4 .STL  link5 .STL  rightlink.STL
mobile/mobileit_move/: CMakeLists.txt  package.xml
mobile/mobileit_move/config/: fake_controllers.yaml  mobile.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
mobile/mobileit_move/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
mobile/urdf/: mobile.csv  mobile.urdf
moveit_mobilerobot/: CMakeLists.txt  package.xml
moveit_mobilerobot/config/: fake_controllers.yaml  gazebo_mobile.urdf  joint_limits.yaml  mobile.srdf  new_ros_controllers.yaml  ompl_planning.yaml
moveit_mobilerobot/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm.launch  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_control_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
